--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Underpig</h1>
 <p>Welcome!</p>
+<iframe src="https://scratch.mit.edu/users/underpig/" width="728" height="90"></iframe>
 </body>
 </html>
