--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <meta charset = "utf-8">
-  <meta name = "description" content = "Website">
+  <meta name = "description" content = "Website">a
   <meta name = "viewport" content = "width = device-width, initial-scale = 1">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
   <title>Tazzil</title>
