--- a/bday.html
+++ b/bday.html
@@ -1,1 +1,38 @@
-
+<!doctype html>
+<html lang = "en">
+<head>
+  <meta charset = "utf-8">
+  <meta name = "description" content = "Website">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
+  <title>Happy Birthday</title>
+  <style>
+  * { box-sizing: border-box; }
+  body {
+    margin: 5vh;
+    font-family: "Comfortaa";
+    display: grid;
+    text-align: center;
+    align-content: center;
+  }
+  </style>
+</head>
+<body>
+  <header>
+    <a href = "site.html" class = "logo">
+      <img class="logo-small" src="img/logo-small.svg" alt="Tazzil Logo" style="width: 6vh; height: auto;">
+    </a>
+    <div class = "site-nav">
+      <a href = "site.html">Home</a>
+      <a href = "#">Creations</a>
+      <a href = "#">Origins</a>
+      <a href = "products.html">Products</a>
+    </div>
+  </header>
+  <div class = "sections">
+    <section class = "hero">
+      <img class="logo-full" src="img/logo-full-white.svg" alt="Tazzil" style="width: 50vh; height: auto; display: block; margin: auto">
+    </section>
+  </div>
+</body>
+</html>
