--- a/bday.html
+++ b/bday.html
@@ -22,16 +22,10 @@
     <a href = "site.html" class = "logo">
       <img class="logo-small" src="img/logo-small.svg" alt="Tazzil Logo" style="width: 6vh; height: auto;">
     </a>
-    <div class = "site-nav">
-      <a href = "site.html">Home</a>
-      <a href = "#">Creations</a>
-      <a href = "#">Origins</a>
-      <a href = "products.html">Products</a>
-    </div>
   </header>
   <div class = "sections">
     <section class = "hero">
-      <img class="logo-full" src="img/logo-full-white.svg" alt="Tazzil" style="width: 50vh; height: auto; display: block; margin: auto">
+      <h1 class = "h">H</h1>
     </section>
   </div>
 </body>
