--- a/bday.html
+++ b/bday.html
@@ -7,14 +7,19 @@
   <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
   <title>Happy Birthday</title>
   <style>
-  * { box-sizing: border-box; }
-  body {
-    margin: 5vh;
-    font-family: "Comfortaa";
-    display: grid;
-    text-align: center;
-    align-content: center;
-  }
+    * { box-sizing: border-box; }
+    body {
+      margin: 5vh;
+      font-family: "Comfortaa";
+      display: grid;
+      text-align: center;
+      align-content: center;
+    }
+  
+    section {
+      margin: 10vh;
+      border-radius: 10%;
+    }
   </style>
 </head>
 <body>
