--- a/bday.html
+++ b/bday.html
@@ -31,6 +31,15 @@
   <div class = "sections">
     <section class = "hero">
       <h2 class = "h">H</h2>
+       <h2 class = "a">A</h2>
+       <h2 class = "p">P</h2>
+       <h2 class = "p">P</h2>
+       <h2 class = "y">Y </h2>
+       <h2 class = "b">B</h2>
+       <h2 class = "-">-</h2>
+       <h2 class = "d">D</h2>
+       <h2 class = "a">A</h2>
+       <h2 class = "y">Y</h2>
     </section>
   </div>
 </body>
