--- a/bday.html
+++ b/bday.html
@@ -19,6 +19,11 @@
     section {
       margin: 10vh;
       border-radius: 10%;
+      font-weight: 0;
+    }
+    
+    .hero {
+      display: flex;
     }
   </style>
 </head>
