--- a/bday.html
+++ b/bday.html
@@ -45,6 +45,7 @@
        <h2 class = "d">D</h2>
        <h2 class = "a">A</h2>
        <h2 class = "y">Y</h2>
+       <h2 class = "!">!</h2>
     </section>
   </div>
 </body>
