--- a/bday.html
+++ b/bday.html
@@ -11,19 +11,16 @@
     body {
       margin: 5vh;
       font-family: "Comfortaa";
-      display: grid;
+      display: flex;
       text-align: center;
       align-content: center;
+      align-items: center;
     }
   
     section {
       margin: 10vh;
       border-radius: 10%;
       font-weight: 0;
-    }
-    
-    .hero {
-      display: flex;
     }
   </style>
 </head>
