--- a/bday.html
+++ b/bday.html
@@ -14,7 +14,6 @@
       display: flex;
       text-align: center;
       align-content: center;
-      align-items: center;
     }
   
     section {
@@ -25,6 +24,7 @@
     hero h2 {
       opacity: 0;
       animation: dropIn 2s;
+      font-size: 50vh;
     }
     
     @keyframes dropIn {
