--- a/bday.html
+++ b/bday.html
@@ -17,8 +17,9 @@
     }
   
     section {
-      margin: 10vh;
+      padding: 10vh;
       border-radius: 10%;
+      background-image: linear-gradient(lightyellow, pink);
     }
     
     hero h2 {
