--- a/bday.html
+++ b/bday.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
   <title>Happy Birthday</title>
   <style>
-    * { box-sizing: border-box; }
+    /* { box-sizing: border-box; } */
     body {
       margin: 5vh;
       font-family: "Comfortaa";
