--- a/bday.html
+++ b/bday.html
@@ -13,12 +13,12 @@
       font-family: "Comfortaa";
       display: flex;
       text-align: center;
-      align-content: center;
+      align-items: center;
     }
   
     section {
       padding: 10vh;
-      border-radius: 10%;
+      border-radius: 10vh;
       background-image: linear-gradient(lightyellow, pink);
     }
     
