--- a/bday.html
+++ b/bday.html
@@ -11,7 +11,7 @@
     body {
       margin: 5vh;
       font-family: "Comfortaa";
-      display: flex;
+      display: grid;
       text-align: center;
       align-items: center;
     }
@@ -20,6 +20,8 @@
       padding: 10vh;
       border-radius: 10vh;
       background-image: linear-gradient(lightyellow, pink);
+      display: flex;
+      text-align: center;
     }
     
     hero h2 {
