--- a/bday.html
+++ b/bday.html
@@ -22,6 +22,7 @@
       background-image: linear-gradient(lightyellow, pink);
       display: flex;
       text-align: center;
+      align-items: center;
     }
     
     hero h3 {
