--- a/bday.html
+++ b/bday.html
@@ -25,7 +25,7 @@
       align-items: center;
     }
     
-    hero h3 {
+    .hero h3 {
       opacity: 0;
       animation: dropIn 2s;
       font-size: 100vh;
