--- a/bday.html
+++ b/bday.html
@@ -66,6 +66,10 @@
       animation-delay: 9s;
     }
     
+    .logo {
+      margin: 1vh;
+    }
+    
     @keyframes dropIn {
       from {
         opacity: 0;
@@ -83,7 +87,7 @@
 </head>
 <body>
   <header>
-    <a href = "site.html" class = "logo">
+    <a href = "index.html" class = "logo">
       <img class="logo-small" src="img/logo-small.svg" alt="Tazzil Logo" style="width: 6vh; height: auto;">
     </a>
   </header>
