--- a/bday.html
+++ b/bday.html
@@ -28,7 +28,8 @@
     
     .hero h3 {
       opacity: 0;
-      animation: dropIn 2s;
+      animation-name: dropIn;
+      animation-duration: 2s;
       font-size: 10vh;
       color: white;
       opacity: 1;
