--- a/bday.html
+++ b/bday.html
@@ -29,7 +29,8 @@
     .hero h3 {
       opacity: 0;
       animation-name: dropIn;
-      animation-duration: infinite;
+      animation-duration: 2s;
+      animation-repeat: infinite;
       font-size: 10vh;
       color: white;
       opacity: 1;
