--- a/bday.html
+++ b/bday.html
@@ -30,7 +30,7 @@
       opacity: 0;
       animation-name: dropIn;
       animation-duration: 2s;
-      animation-repeat: infinite;
+      animation-iteration-count: infinite;
       font-size: 10vh;
       color: white;
       opacity: 1;
