--- a/bday.html
+++ b/bday.html
@@ -31,6 +31,7 @@
       animation-name: dropIn;
       animation-duration: 2s;
       animation-iteration-count: infinite;
+      animation-direction: alternate;
       font-size: 10vh;
       color: white;
       opacity: 1;
