--- a/bday.html
+++ b/bday.html
@@ -14,6 +14,7 @@
       display: grid;
       text-align: center;
       align-items: center;
+      transition: ease 1s transformY;
     }
   
     section {
