--- a/bday.html
+++ b/bday.html
@@ -14,7 +14,7 @@
       display: grid;
       text-align: center;
       align-items: center;
-      transition: ease 1s transformY;
+      transition: ease 1s transform;
     }
   
     section {
