--- a/bday.html
+++ b/bday.html
@@ -79,6 +79,7 @@
       max-width: 300px;
       margin: auto;
       text-align: center;
+      padding: 10px;
     }
     
     .name {
@@ -93,9 +94,10 @@
       color: white;
       background-color: black;
       text-align: center;
-      ccursor: pointer;
+      cursor: pointer;
       width: 100%;
       font-size: 18px;
+      margin: 0;
     }
     
     .card button:hover {
