--- a/bday.html
+++ b/bday.html
@@ -27,7 +27,7 @@
       height: 50vh;
     }
     
-    .hero {
+    .letters {
       margin-left: 50%;
     }
     
@@ -137,17 +137,19 @@
   </header>
   <div class = "sections">
     <section class = "hero">
-      <h3 class = "h">H</h2>
-      <h3 class = "a">A</h2>
-      <h3 class = "p">P</h2>
-      <h3 class = "p">P</h2>
-      <h3 class = "y">Y </h2>
-      <h3 class = "b">B</h2>
-      <h3 class = "-">-</h2>
-      <h3 class = "d">D</h2>
-      <h3 class = "a">A</h2>
-      <h3 class = "y">Y</h2>
-      <h3 class = "!">!</h2>
+       <div class = "letters">
+        <h3 class = "h">H</h2>
+        <h3 class = "a">A</h2>
+        <h3 class = "p">P</h2>
+        <h3 class = "p">P</h2>
+        <h3 class = "y">Y </h2>
+        <h3 class = "b">B</h2>
+        <h3 class = "-">-</h2>
+        <h3 class = "d">D</h2>
+        <h3 class = "a">A</h2>
+        <h3 class = "y">Y</h2>
+        <h3 class = "!">!</h2>
+      </div>
     </section>
     <section class = "faces">
       <div class = "card">
