--- a/bday.html
+++ b/bday.html
@@ -22,7 +22,7 @@
       background-image: linear-gradient(lightyellow, pink);
       display: flex;
       text-align: center;
-      align-items: center;
+      align-content: center;
       height: 50vh;
     }
     
@@ -161,7 +161,28 @@
       </div>
     </section>
     <section class = "faces">
-      <div class = "card">
+      <div class = "card card1">
+        <img src = "" alt = "Face" style = "width: 100%;">
+        <h1><i>"Hello!"</i></h1>
+        <p class = "name">My Name!</p>
+        <p>Happy Birthday, Gamma!</p>
+        <p><a>It's Me!</a></p>
+      </div>
+      <div class = "card card2">
+        <img src = "" alt = "Face" style = "width: 100%;">
+        <h1><i>"Hello!"</i></h1>
+        <p class = "name">My Name!</p>
+        <p>Happy Birthday, Gamma!</p>
+        <p><a>It's Me!</a></p>
+      </div>
+      <div class = "card card3">
+        <img src = "" alt = "Face" style = "width: 100%;">
+        <h1><i>"Hello!"</i></h1>
+        <p class = "name">My Name!</p>
+        <p>Happy Birthday, Gamma!</p>
+        <p><a>It's Me!</a></p>
+      </div>
+      <div class = "card card4">
         <img src = "" alt = "Face" style = "width: 100%;">
         <h1><i>"Hello!"</i></h1>
         <p class = "name">My Name!</p>
