--- a/bday.html
+++ b/bday.html
@@ -101,7 +101,7 @@
       padding: 10px;
       border-radius: 10px;
       animation-name: card;
-      animation-duration 5s;
+      animation-duration: 5s;
     }
     
     .name {
