--- a/bday.html
+++ b/bday.html
@@ -147,12 +147,12 @@
     
     @keyframes card {
       from {
-        transform: scale(150%);
+        transform: scale(2, 2);
         opacity: 0.5;
       }
       
       to {
-        transform: scale(0);
+        transform: scale(1, 1);
         opacity: 1;
       }
     }
