--- a/bday.html
+++ b/bday.html
@@ -100,8 +100,12 @@
       text-align: center;
       padding: 10px;
       border-radius: 10px;
-      animation-name: card;
-      animation-duration: 5s;
+      transition: transform .2s ease-in-out;
+      transform: scale(0, 0);
+    }
+    
+    .card:hover {
+      transform: scale(2, 2);
     }
     
     .name {
