--- a/bday.html
+++ b/bday.html
@@ -152,11 +152,13 @@
     @keyframes card {
       from {
         transform: scale(2, 2);
+        transform: rotate(10deg);
         opacity: 0.5;
       }
       
       to {
         transform: scale(1, 1);
+        transform: rotate(10deg);
         opacity: 1;
       }
     }
