--- a/bday.html
+++ b/bday.html
@@ -13,7 +13,7 @@
       font-family: "Comfortaa";
       display: grid;
       text-align: center;
-      align-items: center;
+      /* align-items: center; */
     }
   
     section {
@@ -22,7 +22,7 @@
       background-image: linear-gradient(lightyellow, pink);
       display: flex;
       text-align: center;
-      align-content: center;
+      /* align-content: center; */
       height: 50vh;
     }
     
