--- a/bday.html
+++ b/bday.html
@@ -13,7 +13,7 @@
       font-family: "Comfortaa";
       display: grid;
       text-align: center;
-      /* align-items: center; */
+      align-items: center;
     }
   
     section {
@@ -22,7 +22,7 @@
       background-image: linear-gradient(lightyellow, pink);
       display: flex;
       text-align: center;
-      /* align-content: center; */
+      align-content: center;
       height: 50vh;
     }
     
@@ -101,7 +101,7 @@
       padding: 10px;
       border-radius: 10px;
       transition: transform .2s ease-in-out;
-      transform: scale(0, 0);
+      transform: scale(1, 1);
     }
     
     .card:hover {
