--- a/bday.html
+++ b/bday.html
@@ -13,7 +13,7 @@
       font-family: "Comfortaa";
       display: grid;
       text-align: center;
-      align-items: center;
+      align-content: center;
     }
   
     section {
