--- a/bday.html
+++ b/bday.html
@@ -95,7 +95,7 @@
       text-align: center;
       padding: 10px;
       border-radius: 10px;
-      transition: transform .2s ease-in-out;
+      transition: transform .2s ease;
       transform: scale(1, 1);
     }
     
