--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-    <meta http-equiv="refresh" content="0; URL=underpig1.github.io/portfolio">
+    <meta http-equiv="refresh" content="0; URL=https://underpig1.github.io/portfolio">
 </head>
