--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<head>
-    <meta http-equiv="refresh" content="0; URL=https://underpig1.github.io/portfolio">
-</head>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0; URL=https://underpig1.github.io/portfolio">
+    </head>
+</html>
